# routes/api.php
@@ -3,6 +3,9 @@
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Api\AuthController;
+use App\Http\Controllers\Api\ClienteController;
+use App\Http\Controllers\Api\SolicitudController;
+use App\Http\Controllers\Api\PrestamoController;
 
 
 Route::post('/register', [AuthController::class, 'register']);
@@ -17,6 +20,8 @@ Route::middleware('auth:sanctum')->group(function () {
     Route::apiResource('clientes', App\Http\Controllers\Api\ClienteController::class);
     /* Solicitud resource routes */
     Route::apiResource('solicitudes', App\Http\Controllers\Api\SolicitudController::class);
+    /* Prestamo resource routes */
+    Route::apiResource('prestamos', App\Http\Controllers\Api\PrestamoController::class);
 });
 
 
